--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,51 +14,68 @@
     background-size: cover;
     width: 100vw;
     height: 100vh;
-}
 
-.logo {
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 3px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 nav {
+    width: 70%;
+    margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     min-height: 10vh;
-    font-weight: bold;
+}
+
+.logo a {
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 3px;
     color: white;
+    transition: letter-spacing .2s;
+}
+
+.logo a:hover {
+    letter-spacing: 5px;
 }
 
 nav ul {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    width: 30vw;
+    justify-content: space-evenly;
+    width: 30%;
 }
 
 nav ul li {
     list-style: none;
+    font-weight: bold;
 }
 
 nav ul li a {
     letter-spacing: 2px;
     text-decoration: none;
     color: white;
+    transition: border-bottom .2s;
 }
 
 nav ul li a:hover {
-    
-    text-decoration: none;
     border-bottom: 2px solid;
 }
 
-.content, footer {
-    text-align: center;
+.content {
+    flex-grow: 1;
 }
 
 .greeting {
     letter-spacing: 2px;
     color: white;
+    text-align: center;
+}
+
+footer {
+    text-align: center;
+    color: white;
+    margin: 20px;
 }
