--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,22 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap');
-
-$color: white;
+@import './variables.scss';
 
 * {
-    font-family: 'Roboto Condensed', 'Times New Roman';
+    font-family: 'Roboto Condensed', 'Segoe UI', 'Arial';
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 .container {
-    background-image: url('../images/background.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: $primaryColor;
     width: 100vw;
     height: 100vh;
-
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -27,13 +22,18 @@ $color: white;
 }
 
 .greeting {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     letter-spacing: 2px;
-    color: $color;
+    color: $fontColor;
     text-align: center;
+    font-size: 36px;
 }
 
 footer {
     text-align: center;
-    color: $color;
+    color: $fontColor;
     margin: 20px;
 }
