Playing with some shadow

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,3 +2,5 @@ $primaryColor: #548dd4;
 $secondaryColor: #7f7f7f;
 $tertiaryColor: #1f497d;
 $fontColor: #fafafa;
+$primaryColorOff: #3a7dcf;
+$primaryColorShadow: #2970c7;
