--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,7 @@
 }
 
 .container {
-    background-color: $primaryColor;
+    background: linear-gradient(to bottom, $primaryColorOff 0%, $primaryColor 100%);
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -30,6 +30,7 @@
     color: $fontColor;
     text-align: center;
     font-size: 36px;
+    text-shadow: 3px 3px $primaryColorShadow;
 }
 
 footer {
