--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $primaryColor: #548dd4;
 $secondaryColor: #7f7f7f;
-$tertiaryColor: #1f497d;
+$tertiaryColor: #525252;
 $fontColor: #fafafa;
 $primaryColorOff: #3a7dcf;
 $primaryColorShadow: #2970c7;
