--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Architects+Daughter|Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker|Roboto+Condensed&display=swap');
 @import './variables.scss';
 
 * {
