--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -10,22 +10,20 @@
 
 .container {
     background: linear-gradient(to bottom, $primaryColorOff 0%, $primaryColor 100%);
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
 .content {
-    flex-grow: 1;
     text-align: center;
     width: 50%;
     margin: auto;
-    padding: 40px;
+    padding: 20px;
     color: $fontColor;
     font-size: 26px;
-    text-shadow: 3px 3px $primaryColorShadow;
 }
 
 @media screen and (max-width: 768px) {
