--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -5,7 +5,7 @@ header {
 }
 
 nav {
-    width: 70%;
+    width: 50%;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -13,7 +13,7 @@ nav {
 }
 
 .logo {
-    width: 30%;
+    width: 50%;
     min-height: 10vh;
     display: flex;
     align-items: center;
@@ -21,7 +21,7 @@ nav {
 
     a {
         font-size: 20px;
-        color: $primaryColorShadow;
+        color: $tertiaryColor;
         text-decoration: none;
         text-transform: uppercase;
         transition: color .4s;
@@ -53,10 +53,10 @@ nav {
 }
 
 .nav-list {
-    width: 70%;
+    width: 50%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin: 0 auto;
 
     li {
