--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -7,6 +7,7 @@
 .avatar {
     width: 250px;
     height: 250px;
+    margin: auto;
     border: 5px solid $fontColor;
     border-radius: 100%;
 }
@@ -31,7 +32,12 @@
 
     .list {
         columns: 2;
-        list-style-position: inside;
+        list-style: none;
+    }
+
+    .list li:before {
+        content: '⮞';
+        padding-right: 5px;
     }
 }
 
